--- a/assets/css/UserDash.css
+++ b/assets/css/UserDash.css
@@ -30,7 +30,7 @@ sidebar
     left: -50px;
     overflow-y: auto;
     overflow-x: hidden;
-    background: linear-gradient(90deg, #CC0000 0%, #000080 100%), url("https://images.unsplash.com/photo-1525838983331-f8bd3c000585?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80") center center no-repeat;
+background: linear-gradient(180deg, #120065 0%, #f9ce1d 100%), center center no-repeat;
     background-size: cover;
     transition: all 0.5s ease;
 }
@@ -105,7 +105,7 @@ sidebar
 .navbar-nav>li>a.active {
     color: #FFFFFF !important;
     font-weight: bold;
-    background: linear-gradient(90deg, #CC0000 0%, #FFFFFF 85%, transparent);
+    background: linear-gradient(90deg, #CC0000 0%, #FFCC00 85%, transparent);
     border-left: 4px solid #0000CC;
 }
 
@@ -555,7 +555,7 @@ footer.footer ul {
     background: linear-gradient(90deg, rgba(59, 125, 221, .1), rgba(59, 125, 221, .0875) 50%, transparent); */
 
     font-weight: bold;
-    background: linear-gradient(90deg, rgba(11, 49, 239, 1) 0%, rgba(255, 255, 255, .0875) 85%, transparent);
+    background: linear-gradient(90deg, rgba(11, 49, 239, 1) 0%, rgba(249,206,29,255) 85%, transparent);
 
     cursor: pointer;
 
