--- a/assets/css/UserDash.css
+++ b/assets/css/UserDash.css
@@ -1,7 +1,7 @@
 body {
     position: relative;
     overflow-x: hidden;
-    background: #f7f7fc;
+background: linear-gradient(180deg, #ffffff 0%, #dcdbdf 100%), center center no-repeat;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -30,7 +30,7 @@ sidebar
     left: -50px;
     overflow-y: auto;
     overflow-x: hidden;
-background: linear-gradient(180deg, #120065 0%, #f9ce1d 100%), center center no-repeat;
+background: linear-gradient(180deg, #120065 0%, #CC0001 100%), center center no-repeat;
     background-size: cover;
     transition: all 0.5s ease;
 }
