--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, #FF0000 0%, #000080 100%), url("../img/hero-bg.jpg") center center no-repeat;
+  background: linear-gradient(45deg, #FF0000 0%, #000080 100%) center center no-repeat;
   /* background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); */
   /* background: linear-gradient(to right, #2c3e50, #bdc3c7);  */
 
