--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,6 +396,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+
+
+
+
+/* style.css */
+
+
+
+
+
+
+
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
