--- a/assets/css/UserDash.css
+++ b/assets/css/UserDash.css
@@ -555,7 +555,8 @@ footer.footer ul {
     background: linear-gradient(90deg, rgba(59, 125, 221, .1), rgba(59, 125, 221, .0875) 50%, transparent); */
 
     font-weight: bold;
-    background: linear-gradient(90deg, rgba(11, 49, 239, 1) 0%, rgba(249,206,29,255) 85%, transparent);
+background: linear-gradient(90deg, transparent 0%, rgba(18,0,101,255) 100%);
+
 
     cursor: pointer;
 
