--- a/assets/css/staffStyle.css
+++ b/assets/css/staffStyle.css
@@ -19,31 +19,21 @@ font-size: 22px;
 font-weight: 600;
 
 }
-/* The Modal (background) */
+
 .customodal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     padding-top: 100px;
-    /* Location of the box */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
-    /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/ opacity */
 }
 
-/* Modal Content (Image) */
 .customodal-content {
     margin: auto;
     display: block;
@@ -51,7 +41,6 @@ font-weight: 600;
     max-width: 700px;
 }
 
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
 #caption {
     margin: auto;
     display: block;
@@ -63,7 +52,6 @@ font-weight: 600;
     height: 150px;
 }
 
-/* Add Animation - Zoom in the Modal */
 .customodal-content,
 #caption {
     animation-name: zoom;
@@ -80,7 +68,6 @@ font-weight: 600;
     }
 }
 
-/* The Close Button */
 .closebtn {
     position: absolute;
     top: 15px;
@@ -98,7 +85,6 @@ font-weight: 600;
     cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
@@ -182,7 +168,7 @@ border-radius: 4px;
 }
 @media screen and (min-width: 368px) {
 .modal.show .modal-dialog {
-max-width: calc(70% - 17rem); /* Subtract the width of the expanded navbar */
+max-width: calc(70% - 17rem); 
 margin-left: auto;
 }
 }
